# kra-tognoek

./: .gitignore  LICENSE  README.md  SUBMISSION_FLOW.md  package-lock.json  package.json  run-all.bat  run-all.sh
Ark/: Cargo.toml
Ark/src/: main.rs
Client/: README.md  (+4 more)
Kra/: Cargo.toml  README.md  docker.md  meta.txt  nhan.out
Kra/src/: main.rs  none.rs
Kra/src/isolate/: core.rs  mod.rs  utils.rs
Kra/src/tog/: fetch.rs  isolate.rs  mod.rs  old.rs  run.rs  types.rs
Kra/ui/: index.html
S3/: .gitignore  Cargo.toml  README.md  env.example  upload.html
S3/data/baocao/: Kanade.md  tognoek.cpp
S3/data/code/: admin_1766854797333.cpp  admin_1767022782892.cpp  maucong.cpp  maunhanfile.cpp
S3/data/problems/: bacthanh.md  boichung.cpp  boichung.md  chanle.cpp  chanle.md  chiadu.md  chuanhoaxau.md  cuochen.cpp  cuochen.md  dicu.cpp  dicu.md  doiquan.md  duyenbinh.cpp  fibo.cpp  fibo.md  fibobehonk.md  hangrao.md  ketrom.md  kimcuong.cpp  kimcuong.md  matma.md  matmatronghang.md  maxarray.md  monqua.cpp  monqua.md  nguyento.cpp  nguyento.md  soam.md  soluongnguyento.cpp  soluongnguyento.md  thuong.cpp  thuong.md  tong.md  tongam.md  tonghonk.cpp  tonghonk.md  uocchung.md
S3/data/problems/bacthang/: bacthang.cpp
S3/data/problems/boichung/: boichung.md
S3/data/problems/check-kra/: number.cpp
S3/data/problems/chiadu/: chiadu.cpp
S3/data/problems/chuanhoaxau/: chuanhoaxau.cpp
S3/data/problems/dicu/: dicu.md
S3/data/problems/doiquan/: doiquan.cpp  doiquan.md
S3/data/problems/duyetbinh/: duyenbinh.md
S3/src/: main.rs  monitor.rs  pool.rs  stats.rs
(+188 files in other folders)
