[package]
name = "Kra"
version = "0.1.0"
edition = "2021"

# Binary chính: worker + web UI (src/main.rs)
[[bin]]
name = "Kra"
path = "src/main.rs"

[dependencies]

redis = { version = "0.25", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
zip = "0.6"
tempfile = "3"
walkdir = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["macros", "form"] }
once_cell = "1.19"